# gdrive-automation

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  models.py  schemas.py
backend/app/routers/: auth.py  drive.py  extraction.py  feedback.py  webhook.py
backend/app/services/: drive_watch.py  google_auth.py  google_drive.py  jwt_service.py  openai_service.py  textract.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: AuthCallback.jsx  FeedbackForm.jsx  FileList.jsx  Navbar.jsx  ProtectedRoute.jsx  StarRating.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: DashboardPage.jsx  DriveBrowserPage.jsx  ExtractionPage.jsx  FeedbackPage.jsx  FolderPickerPage.jsx  LoginPage.jsx
